iac/terraform/extras/monitoring/grafana/crs/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    # Ingress controller
    # Ref: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/limit-rpm: "60"
    
    # Cert Manager
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  rules:
  - host: &host grafana.varbelhome.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
    - *host
    secretName: grafana-tls
